<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/stockList"
            app:layout_constraintHorizontal_bias="1.0">

        <CheckBox
                android:text="@string/list_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/list_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listTime"
                app:layout_constraintStart_toEndOf="@+id/checkBox" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/list_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listQuantity" android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/listTime" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        />
        <TextView
                android:text="@string/list_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listComment" android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/listQuantity" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="@string/list_delete_button"
                android:layout_height="wrap_content"
                android:id="@+id/deleteStockButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_width="97dp"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>